tests/NormalTests/paczka1/fuzzy1/27223533.err
Error in line 1: h05tqPgAgu7 S408 28,9
Error in line 3: 8rhYoDJkn7T S478 59,1
Error in line 6: RPP A725 66,7
Error in line 10: 8rhYoDJkn7T A725 39,8
Error in line 11: RPP S335 88,9
Error in line 17: RPP S408 85,6
Error in line 18: RPP S478 66,7
Error in line 27: PUfmgwPREk8 A725 21,1
Error in line 38: PUfmgwPREk8 S478 54,2
